# goit-web-hw-10

django_quotes/: migration_script.py
django_quotes/django_quotes/: asgi.py  settings.py  urls.py  wsgi.py
django_quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
django_quotes/quotesapp/migrations/: 0001_initial.py  0002_alter_quote_tags.py  0003_author_user_quote_user.py  0004_remove_author_user_remove_quote_user.py  0005_author_user_quote_user.py
django_quotes/templates/: base.html
django_quotes/templates/quotesapp/: about.html  author_form.html  index.html  quote_form.html
django_quotes/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  signup.html
django_quotes/users/: forms.py  urls.py  views.py
venv_guotes/: pyproject.toml
