[tool.poetry]
name = "venv-guotes"
version = "0.1.0"
description = ""
authors = ["BombingArt <yaroshenkoyarik987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
mongoengine = "^0.28.2"
psycopg2 = "^2.9.9"
pymongo = "^4.7.2"
djongo = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
